<resources>
    <string name="app_name">ALL IN</string>
    <string name="key_api">AIzaSyBP5P6Zpi6UBcOiD0g5yM86AK92IobgZvE</string>
    <string name="facebook_app_id">1605130663121241</string>
    <string name="registrar_alling">Registrarse en ALLIN</string>
    <string name="Acerca_Allin">ACERCA DE ALLIN</string>
    <string name="Usuario_Allin">USUARIO ALLIN</string>
    <string name="Sugerencia_Allin">SUGERENCIAS PARA ALLIN</string>
    <string name="Cerrar">CERRAR</string>
    <string name="nav_item_inicio">INICIO</string>
    <string name="nav_item_perfil">EDITAR MI PERFIL</string>
    <string name="nav_item_recomendar">RECOMENDAR AMIGOS</string>
    <string name="nav_item_compras">VER MIS COMPRAS</string>
    <string name="nav_item_puntos">MIS PUNTOS ALL IN</string>
    <string name="nav_item_cerrar_sesion">CERRAR SESION</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="refrescar">Refrescar</string>
    <string name="remover">Remover</string>
    <string name="mantener">Mantener</string>
    <string name="usuario_corporativo">USUARIO CORPORATIVO</string>
    <string name="admin_preventas">Administrador de preventas y listas</string>
    <string name="usuario_correo_login">USUARIO O CORREO</string>
    <string name="password_login">*******</string>
    <string name="registrarse_login">Registrarse en ALLIN</string>
    <string name="registrarse_loginF">Connect with Facebook</string>
    <string name="registro">REGISTRO</string>
    <string name="registro_nombres">Nombres</string>
    <string name="registro_fechanac">Fecha de Nacimiento</string>
    <string name="registro_dni">Numero de DNI</string>
    <string name="registro_sexo">Sexo</string>
    <string name="registro_direccion">Direccion</string>
    <string name="registro_correo">Correo Electronico</string>
    <string name="registro_numero">Numero de Movil</string>
    <string name="registro_operador">Operador</string>
    <string name="registro_tarjeta">¿Que tarjeta de credito usas ?</string>
    <string name="registro_visa">VISA</string>
    <string name="registro_mastercard">MASTERCARD</string>
    <string name="registro_avatar">Mi Avatar (FOTO)</string>
    <string name="user_titulo">Todos tus locales y eventos con descuentos increibles</string>
    <string name="user_login">Connect with Facebook</string>
    <string name="eventos_fiestas">Fiestas</string>
    <string name="eventos_conciertos">Conciertos</string>
    <string name="eventos_otroseventos">Otros Eventos</string>
    <string name="eventos_calendario">Calendario</string>
    <string name="eventos_vertodo">Ver Todo</string>
    <string name="eventos_titulo">ELIJA UN TIPO DE BUSQUEDA</string>
    <string name="recomendados_titulo">ELIJA UN TIPO DE BUSQUEDA</string>
    <string name="recomendados_lugar">Lugares</string>
    <string name="recomendados_eventosespec">Eventos Especiales</string>
    <string name="lista_discoteca">Discoteca</string>
    <string name="lista_karaokes">Karaokes</string>
    <string name="lista_restobares">Restobares</string>
    <string name="lista_eventos">Eventos Especiales</string>
    <string name="lista_titulo">FILTRO</string>
    <string name="discoteca_direccion"><u>DIRECCIÓN</u></string>
    <string name="discoteca_aforo"><u>AFORO</u></string>
    <string name="discoteca_descripcion"><u>DESCRIPCIÓN</u></string>
    <string name="discoteca_tipomusica"><u>TIPO DE MUSICA</u></string>
    <string name="busqueda_titulo">ELIJA UN TIPO DE BUSQUEDA</string>
    <string name="busqueda_gps">Busqueda por GPS</string>
    <string name="busqueda_distrito">Busqueda por Distrito</string>
    <string name="busqueda_tipomusica">Busqueda por Tipo de Musica</string>
    <string name="busqueda_calendario">Busqueda por Calendario</string>
    <string name="title_activity_maps">Map</string>
    <string name="editar_nombre">Nombres:</string>
    <string name="editar_apellido_paterno">Apellido Paterno:</string>
    <string name="editar_apellido_materno">Apellido Materno:</string>
    <string name="editar_fecha_nacimiento">Fecha de Nacimiento:</string>
    <string name="editar_numero_dni">N° de DNI:</string>
    <string name="editar_Direccion">Direccion:</string>
    <string name="editar_referencia">Referencia</string>
    <string name="editar_numero_movil">Numero Móvil:</string>
    <string name="editar_correo">Correo Electrónico</string>
    <string name="editar_confirmar_correo">Confirmar correo</string>
    <string name="recomendar">Recomendar a amigos:</string>
    <string name="telefono">Telefono:</string>
    <string name="correo">Correo:</string>
    <string name="no_obligatorio">(No Obligatorio)</string>
    <string name="ver_compras">VER MIS COMPRAS</string>
    <string name="historial">HISTORIAL</string>
    <string name="fecha_compra">FECHA DE COMPRA</string>
    <string name="detalle">DETALLE</string>
    <string name="pago">PAGO</string>
    <string name="detalle_compra">DETALLES</string>
    <string name="sientente_vip">Sientete VIP.\n Todos tus locales y eventos \n con descuentos increíbles</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="registro_apellido">Apellidos</string>
    <string name="registro_referecia">Referencia</string>
    <string name="registro_contrasenia">Contraseña</string>
    <string name="registro_recontrasenia">Repita su contraseña</string>
    <string name="row_condiciones">CONDICIONES</string>
    <string name="row_agregar">AGREGAR A CARRITO</string>
    <string name="row_remover">REMOVER DE CARRITO</string>
    <string name="row_canjear">CANJEAR</string>
    <string name="editar_perfil">EDITAR PERFIL</string>
    <string name="mis_puntos">MIS PUNTOS ALLIN</string>
    <string name="puntos_consumo">PUNTOS CONSUMO:</string>
    <string name="puntos_interaccion">PUNTOS INTERACCIÓN:</string>
    <string name="puntos">PUNTOS</string>
    <string-array name="DISTRITOS">
        <item>ANCÓN</item>
        <item>ATE</item>
        <item>BARRANCO</item>
        <item>BREÑA</item>
        <item>CARABAYLLO</item>
        <item>CHACLACAYO</item>
        <item>CHORRILLOS</item>
        <item>CIENEGUILLA</item>
        <item>COMAS</item>
        <item>EL AGUSTINO</item>
        <item>INDEPENDENCIA</item>
        <item>JESÚS MARÍA</item>
        <item>LA MOLINA</item>
        <item>LA VICTORIA</item>
        <item>LIMA</item>
        <item>LINCE</item>
    </string-array>
    <string name="ancon">ANCÓN</string>
    <string name="ate">ATE</string>
    <string name="barranco">BARRANCO</string>
    <string name="breña">BREÑA</string>
    <string name="Carabayllo">CARABAYLLO</string>
    <string name="Chaclacayo">CHACLACAYO</string>
    <string name="Chorrillos">CHORRILLOS</string>
    <string name="Cieneguilla">CIENEGUILLA</string>
    <string name="Comas">COMAS</string>
    <string name="el_agustino">EL AGUSTINO</string>
    <string name="independencia">INDEPENDENCIA</string>
    <string name="jesus_maria">JESÚS MARÍA</string>
    <string name="la_molina">LA MOLINA</string>
    <string name="la_victoria">LA VICTORIA</string>
    <string name="lima">LIMA</string>
    <string name="lince">LINCE</string>
    <string name="ver_carta">VER CARTA \n </string>
    <string name="apuntarme_lista">APUNTARME EN LISTA</string>
    <string name="proximos_eventos">PRÓXIMOS EVENTOS</string>
    <string name="agregar_a_lista_rapida">AGREGAR A LISTA RÁPIDA</string>
    <string name="comprar_entrada">\nCOMPRAR ENTRADA</string>
    <string name="ver_mapa_evento">VER MAPA \n DEL EVENTO</string>
    <string name="desea_adquirir">Elija las entradas que desea adquirir:</string>
    <string name="entradas">ENTRADAS</string>
    <string name="precio_normal">Precio NORMAL</string>
    <string name="precio_allin">Precio ALLIN</string>
    <string name="general">GENERAL</string>
    <string name="vip">VIP</string>
    <string name="box10">BOX (10 PERSONAS)</string>
    <string name="pagar_ahora">PAGAR AHORA</string>
    <string name="comprar_entradas">COMPRA DE ENTRADAS</string>
    <string name="cantidad">cantidad</string>
    <string name="ahorrado">TE HAS AHORRADO:</string>
    <string name="nombre_titular">Nombre del Titular</string>
    <string name="nro_tarjeta">Número de la Tarjeta</string>
    <string name="fec_vencimiento">Fecha de vencimiento:</string>
    <string name="mes">Mes</string>
    <string name="anio">Año</string>
    <string name="codigo_seguridad">Cod. Seguridad</string>
    <string name="pagar">PAGAR</string>
    <string name="dialogo_su_pago">Su pago ha sido ejecutado con éxito, para mas detalles \n de su compra realizada, puede visualizar en la opción \n de VER MIS COMPRAS.</string>
    <string name="dialogo_usuario_registrate">Si quieres acceder a mas beneficios \n de ALLIN, hazte miembro \n GRATUITAMENTE</string>
    <string name="dialogo_condiciones_compra">*No válido para eventos especiales \n ( VER CALENDARIO ) \n *Incluye entrada libre para el cliente</string>
    <string name="dialogo_compra_realizada">Su compra ha sido realizada y efectuada con éxito. \n Puede ver más detalles de sus compras, en la opción \n \"Ver mis compras\".</string>
    <string name="dialogo_like_discoteca_no_registrada">Si quieres que esta discoteca pertenezca a \n ALLIN, NIGHT LIFE dale LIKE para que pronto \n aparezca en nuestra aplicación</string>
    <string name="concepto">CONCEPTO</string>
    <string name="cantidadM">CANTIDAD</string>
    <string name="normal">NORMAL</string>
    <string name="allin">ALLIN</string>
    <string name="elija_busquedad">ELIJA UN TIPO DE BUSQUEDAD</string>
    <string name="elija_departamento">ELIJA UN DEPARTAMENTO</string>
    <string name="elija_provincia">ELIJA UNA PROVINCIA</string>
    <string name="elija_distrito">ELIJA UN DISTRITO</string>
    <string name="elija_genero">ELIJA UN TIPO DE MUSICA</string>
    <string-array name="arraySexo">
        <item>Masculino</item>
        <item>Femenino</item>
    </string-array>
    <string-array name="arrayDepartamento">
        <item>Amazonas</item>
        <item>Ancash</item>
        <item>Apurimac</item>
        <item>Arequipa</item>
        <item>Ayacucho</item>
        <item>Cajamarca</item>
        <item>Callao</item>
        <item>Cusco</item>
        <item>Huancavelica</item>
    </string-array>
    <string-array name="arrayProvincia">
        <item>Lima</item>
        <item>Barranca</item>
        <item>Cajatambo</item>
        <item>Canta</item>
        <item>Cañete</item>
        <item>Huaral</item>
        <item>Huarochirí</item>
    </string-array>
    <string-array name="arrayDistrito">
        <item>Cercado callao</item>
        <item>Bellavista</item>
        <item>Carmen de la Legua</item>
        <item>La perla</item>
        <item>La punta</item>
    </string-array>
    <string-array name="arrayOperador">
        <item>Movistar</item>
        <item>Claro</item>
        <item>Entel</item>
    </string-array>
    <string name="te_gusta_nuestra_variedad_tragos">¿ Te gusta nuestra variedad de tragos ?</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="hint_tarjeta">1234567891651461584</string>
    <string name="vencimiento_tarjeta">MM/YY</string>
    <string name="vencimiento">Vencimiento</string>
    <string name="cvc_tarjeta">CVC</string>
    <string name="guardar_tarjeta">Quiero guardar esta tarjeta para mi próxima compra</string>
    <string name="aceptar_terminos">Acepto los términos y condiciones y las políticas de devolución y compra</string>
    <string name="comision_online">Comisión online</string>
    <string name="total_tarjeta">Total</string>
    <string name="tarjeta_credito">Tarjeta de crédito/débito</string>
</resources>