<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:orientation="horizontal"
    android:weightSum="1">

    <TextView
        android:id="@+id/row_tv_pregunta_encuesta"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".6"
        android:gravity="center"
        android:textColor="@color/colorblanco"
        android:textSize="@dimen/size_letter7"
        tools:text="@string/te_gusta_nuestra_variedad_tragos" />

    <RadioGroup
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".3"
        android:orientation="horizontal"
        android:weightSum="1">

        <RadioButton
            android:id="@+id/row_db_si"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:text="@string/si"
            android:textColor="@color/colorblanco"
            android:textSize="@dimen/size_letter7" />

        <RadioButton
            android:id="@+id/row_db_no"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight=".5"
            android:textSize="@dimen/size_letter7"
            android:text="@string/no"
            android:textColor="@color/colorblanco" />
    </RadioGroup>

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight=".1"/>

</LinearLayout>