<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    tools:context="com.allin.fragment.TabComprasFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingTop="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/fecha_compra"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorblanco"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/detalle"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorblanco"
            android:textSize="12sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:paddingRight="25dp"
            android:text="@string/pago"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textColor="@color/colorblanco"
            android:textSize="12sp" />
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/colorblanco" />

    <ListView
        android:id="@+id/lista_mis_compras"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@color/colorblanco"
        android:dividerHeight="0.5px"
        android:paddingTop="10dp" />

</LinearLayout>
